register method UpdateProjectMember
