# pms_api/docs/swagger.json
@@ -524,6 +524,13 @@
                 "summary": "Update role and project admin right",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Project id",
+                        "name": "project_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "Project member",
                         "name": "project_member",
                         "in": "body",
